day-12/project-2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: project2
  template:
    metadata:
      labels:
        app: project2
    spec:
      containers:
      - name: web
        image: python:3
        command:
          - python3
          - -c
          - |
            from http.server import BaseHTTPRequestHandler, HTTPServer
            import socket

            class Handler(BaseHTTPRequestHandler):
                def do_GET(self):
                    self.send_response(200)
                    self.send_header('Content-type','text/html')
                    self.end_headers()
                    ip = socket.gethostbyname(socket.gethostname())
                    self.wfile.write(f"<html><body style='background-color:purple; color:white;'><h1>Project2 Pod IP: {ip}</h1></body></html>".encode())

            HTTPServer(('', 8080), Handler).serve_forever()

        ports:
        - containerPort: 8080
