day-12/project-2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project2-service
spec:
  selector:
    app: project2
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
