day-12/project-2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: project-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/group.name: konkas-demo
    external-dns.alpha.kubernetes.io/hostname: purple.konkas.tech
    external-dns.alpha.kubernetes.io/ttl: '60'
spec:
  ingressClassName: alb
  rules:
    - host: purple.konkas.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: project2-service
                port:
                  number: 80
